fix: mobile horizontal scrolling

--- a/src/assets/nurtur-design.scss
+++ b/src/assets/nurtur-design.scss
@@ -104,7 +104,7 @@ h4 {
   letter-spacing: var(--letter-spacing-headline) !important;
 }
 .section-headline {
-  font-size: var(--font-size-xl) !important;
+  font-size: var(--font-size-l) !important;
   font-family: var(--font-family-headline) !important;
   font-weight: var(--font-weight-headline) !important;
   line-height: var(--line-height-headline) !important;
